@startuml
title Diagrama de Estructura: Capa DAO y Conexión - Gym APP

skinparam classAttributeIconSize 0

' PAQUETE DAO (Interfaces arriba, Clases abajo)
package "dao" {
    
    ' Bloque de Interfaces
    interface UsuarioDAO {
        + login(email, pass) : Usuario
        + selectAll() : List<Usuario>
        + selectById(id) : Usuario
        + insert(u) : int
        + update(u) : int
        + delete(id) : int
    }
    interface SocioDAO {
        + selectAll() : List<Socio>
        + selectById(id) : Socio
        + insert(s) : int
        + update(s) : int
        + delete(id) : int
    }
    interface EntrenadorDAO {
        + selectAll() : List<Entrenador>
        + selectById(id) : Entrenador
        + insert(e) : int
        + update(e) : int
        + delete(id) : int
    }
    interface SecretarioDAO {
        + selectAll() : List<Secretario>
        + selectById(id) : Secretario
        + insert(s) : int
        + update(s) : int
        + delete(id) : int
    }
    interface ClaseDAO {
        + selectAll() : List<Clase>
        + selectById(id) : Clase
        + insert(c) : int
        + update(c) : int
        + delete(id) : int
    }
    interface SesionDAO {
        + selectAll() : List<Sesion>
        + selectById(id) : Sesion
        + insert(s) : int
        + update(s) : int
        + delete(id) : int
    }
    interface ReservaDAO {
        + selectAll() : List<Reserva>
        + selectById(idSocio, idSesion) : Reserva
        + insert(r) : int
        + update(r) : int
        + delete(idSocio, idSesion) : int
    }
    interface PlanDAO {
        + selectAll() : List<Plan>
        + selectById(id) : Plan
        + insert(p) : int
        + update(p) : int
        + delete(id) : int
        + actualizarEstado(id, estado) : int
    }
    interface SuscripcionDAO {
        + selectAll() : List<Suscripcion>
        + selectById(id) : Suscripcion
        + insert(s) : int
        + update(s) : int
        + delete(id) : int
    }

    ' Separador invisible para forzar a las interfaces arriba
    UsuarioDAO -[hidden]down-> UsuarioDAOPostgres

    ' Bloque de Implementaciones
    class UsuarioDAOPostgres
    class SocioDAOPostgres
    class EntrenadorDAOPostgres
    class SecretarioDAOPostgres
    class ClaseDAOPostgres
    class SesionDAOPostgres
    class ReservaDAOPostgres
    class PlanDAOPostgres
    class SuscripcionDAOPostgres
}

' PAQUETE DATABASE 
package "database" {
    class ConexionDB {
        + {static} getConexion() : Connection
    }
}
 
' Herencia de comportamiento (Implements)
UsuarioDAO <|.. UsuarioDAOPostgres
SocioDAO <|.. SocioDAOPostgres
EntrenadorDAO <|.. EntrenadorDAOPostgres
SecretarioDAO <|.. SecretarioDAOPostgres
ClaseDAO <|.. ClaseDAOPostgres
SesionDAO <|.. SesionDAOPostgres
ReservaDAO <|.. ReservaDAOPostgres
PlanDAO <|.. PlanDAOPostgres
SuscripcionDAO <|.. SuscripcionDAOPostgres

' Dependencia de conexión
"dao" ..> database : "solicita conexión a"

@enduml